src/components/Player/Player.css
.player {
  align-self: end;
  display: grid;
  grid-template-columns: 36px 1fr min-content 44px;
  grid-template-rows: min-content 1fr;
  grid-template-areas: 
    "player player switcher extend-btn"
    "  .     info    info       .     ";
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 15px;
  font-size: 20px;
  line-height: 1.2;
}

@media screen and (max-width: 1024px) {
  .player {
    font-size: 18px;
  }
}

@media screen and (max-width: 768px) {
  .player {
    margin-bottom: 14px;
  }
}

@media screen and (max-width: 600px) {
  .player {
    margin-left: 0;
    margin-right: 0;
  }
}

@media screen and (max-width: 480px) {
  .player {
    grid-template-rows: min-content min-content 1fr;
    grid-template-columns: 28px 1fr 28px;
    grid-template-areas: 
      "player  player  extend-btn"
      "  .    switcher     .     "
      "  .      info       .     ";
    margin-bottom: 20px;
    font-size: 14px;
  }  
}

